--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "arena_searcher",
   "version": "0.1.0",
   "private": true,
+  "type":"module",
+ 
   "scripts": {
     "dev": "next dev",
     "build": "next build",
